fixed categories layout on mobile

--- a/src/components/Categories/Category/Category.module.scss
+++ b/src/components/Categories/Category/Category.module.scss
@@ -11,8 +11,8 @@
 
 .category_grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
   gap: 1em;
   margin-bottom: 2em;
 
