--- a/src/components/Featured/OfferGroup/OfferGroup.module.scss
+++ b/src/components/Featured/OfferGroup/OfferGroup.module.scss
@@ -5,7 +5,7 @@
 .offer_grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr auto;
+  grid-auto-rows: 1fr;
   justify-content: center;
   gap: 1em;
 
